# tabby

./: .changie.yaml  .dockerignore  .env  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .rustfmt.toml  .tm_properties  .travis.yml  BUG_REPORT.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Contributors.md  Dockerfile  Dockerfile.cuda  Dockerfile.in  Dockerfile.rust  Dockerfile.tabby  Dockerfile_base  LICENSE  MODEL_SPEC.md  Makefile  README-ja.md  README-zh.md  README.md  Untitled-1.ipynb  Updated typos  alloc_gpu  alloc_gpu.cu  benchmark.cc  build.sh  codecov.yml  compute.h  compute_mkl.cc  compute_simd.cc  (+32 more)
cli/: CMakeLists.txt  model.h  translate.cc  translator.cc
clients/tabby-python-client/: README.md  pyproject.toml  setup.py
crates/aim-downloader/: Cargo.toml  LICENCE.md  README.md
crates/aim-downloader/src/: address.rs  bar.rs  consts.rs  error.rs  hash.rs  https.rs  io.rs  lib.rs  netrc.rs  untildify.rs
crates/aim-downloader/test/: common.sh  incomplete_resumable_file
crates/ctranslate2-bindings/: .gitignore  CMakeLists.txt  Cargo.toml  build.rs  build_cmake.sh
crates/ctranslate2-bindings/cmake/: debug_cmake.sh  export_libs.cmake
crates/ctranslate2-bindings/ctranslate2/: README.md
crates/ctranslate2-bindings/include/: ctranslate2.h
crates/ctranslate2-bindings/src/: ctranslate2.cc  lib.rs
crates/custom-tls/: Cargo.toml
crates/custom-tls/src/: main.rs
crates/http-api-bindings/: Cargo.toml  README.md
crates/http-api-bindings/examples/: simple.rs
crates/http-api-bindings/src/: fastchat.rs  lib.rs  llama.rs  multi.rs  openai.rs  openai_chat.rs  rate_limit.rs  vertex_ai.rs
crates/juniper-axum/: Cargo.toml  LICENSE  README.md
crates/juniper-axum/src/: extract.rs  lib.rs  response.rs
crates/llama-cpp-bindings/: CMakeLists.txt  Cargo.toml  build.rs
crates/llama-cpp-bindings/bridge/: engine.cc  engine.h  lib.rs
crates/llama-cpp-bindings/cc/: lib.cc
crates/llama-cpp-bindings/include/: engine.h
crates/llama-cpp-bindings/src/: engine.cc  lib.rs  llama.rs  utils.rs
crates/llama-cpp-server/: Cargo.toml  build.rs
crates/llama-cpp-server/src/: lib.rs  supervisor.rs
crates/ollama-api-bindings/: Cargo.toml
crates/ollama-api-bindings/src/: chat.rs  completion.rs  embedding.rs  lib.rs  model.rs
crates/sqlx-migrate-validate/: Cargo.toml  README.md
crates/sqlx-migrate-validate/src/: error.rs  lib.rs  validate.rs
crates/sqlx-migrate-validate/tests/: validate.rs
crates/tabby/: Cargo.toml  build.rs
crates/tabby-common/: Cargo.toml
crates/tabby-common/assets/: languages.toml
crates/tabby-common/src/: axum.rs  config.rs  constants.rs  enum_conversion.rs  env.rs  events.rs  index.rs  languages.rs  lib.rs  path.rs  registry.rs  terminal.rs  usage.rs
crates/tabby-crawler/: Cargo.toml
crates/tabby-crawler/src/: lib.rs  llms_txt_parser.rs
crates/tabby-download/: Cargo.toml
crates/tabby-download/src/: cache_info.rs  lib.rs  registry.rs
crates/tabby-git/: Cargo.toml
crates/tabby-git/src/: commit.rs  file_search.rs  lib.rs  serve_git.rs
crates/tabby-index/: Cargo.toml  README.md
crates/tabby-index-cli/: Cargo.toml  README.md
crates/tabby-index-cli/assets/: queries.txt
crates/tabby-index-cli/src/: main.rs  timer.rs
crates/tabby-index/queries/: csharp.scm  gdscript.scm  scala.scm  tsx.scm
crates/tabby-index/src/: indexer.rs  indexer_tests.rs  lib.rs  structured_doc_tests.rs  tantivy_utils.rs  tests.rs  testutils.rs
crates/tabby-inference/: Cargo.toml
crates/tabby-inference/src/: chat.rs  code.rs  completion.rs  decoding.rs  embedding.rs  generation.rs  imp.rs  lib.rs
crates/tabby-repositories/: .env  Cargo.toml  schema.sql  schema.sqlite
crates/tabby-repositories/src/: dataset.rs  lib.rs
crates/tabby-scheduler/: Cargo.toml  README.md
crates/tabby-scheduler/examples/: broken-tantivy-json.rs  crawl_and_index.rs  crawler.rs
crates/tabby-scheduler/queries/: bash.scm  go.scm  haskell.scm  kotlin.scm  ocaml.scm  python.scm  ruby.scm  rust.scm  solidity.scm  tsx.scm
crates/tabby-scheduler/src/: cache.rs  dataset.rs  document.rs  incremental.rs  index.rs  indexer.rs  lib.rs  path.rs  repository.rs  repository_store.rs  tags.rs  utils.rs
crates/tabby-scheduler/testdata/: package-lock.json  package.json
crates/tabby-scheduler/tests/: integration_test.rs  sync_repositories.rs
crates/tabby/graphql/: worker.query.graphql
crates/tabby/playground/: 404.html  index.html  index.txt  playground.html  playground.txt
crates/tabby/python/: download_model.py
crates/tabby/src/: chat.rs  completions.rs  download.rs  header.rs  job.rs  main.rs  model.rs  otel.rs  search.rs  serve.rs  webserver.rs  worker.rs
crates/tabby/tests/: golden.json  golden_chat.json  goldentests.rs  goldentests_chat.rs
crates/tabby/ui/: 404.html  LICENSE  api.html  api.txt  index.html  index.txt  playground.html  playground.txt  swagger.html  swagger.txt
ee/tabby-db/: .gitignore  Cargo.toml  SQLX.md  schema.sqlite
ee/tabby-db-macros/: Cargo.toml
ee/tabby-db-macros/src/: lib.rs
ee/tabby-db/docs/: sqlx.md
ee/tabby-db/migrations/: 0001_registration-token-table.up.sql  0002_users-table.up.sql  0003_invitations-table.up.sql  0004_refresh-tokens.down.sql  0004_refresh-tokens.up.sql  0005_job-runs-table.down.sql  0005_job-runs-table.up.sql  0006_github-oauth-credential.up.sql  0007_email-setting.down.sql  0007_email-setting.up.sql  0008_repositories-table.down.sql  0008_repositories-table.up.sql  0009_google-oauth-credential.down.sql  0009_google-oauth-credential.up.sql  0010_new-settings.down.sql  0010_new-settings.up.sql  0010_server-setting.down.sql  0010_server-setting.up.sql  0010_users-active.down.sql  (+102 more)
ee/tabby-job/: Cargo.toml
ee/tabby-schema/: Cargo.toml
tests/: CMakeLists.txt  batching_test.cc  benchmark_ops.cc  benchmark_utils.h  decoding_test.cc  default.loadtest.js  default.smoke.js  layers_test.cc  model_test.cc  ops_test.cc  primitives_test.cc  storage_view_test.cc  test.cc  test_utils.cc  test_utils.h  transformer_test.cc  translator_test.cc
(+8192 files in other folders)
