[workspace]
resolver = "1"
members = [
    "crates/tabby",
    "crates/tabby-common",
    "crates/tabby-scheduler",
    "crates/tabby-download",
    "crates/tabby-inference",
    "crates/llama-cpp-bindings",
    "crates/http-api-bindings",
    "crates/aim-downloader",
    "ee/tabby-webserver",
    "ee/tabby-db",
    "ee/tabby-db-macros",
    "ee/tabby-search",
    "ee/tabby-schema", "crates/llama-cpp-server",
]

[workspace.package]
version = "0.12.0-dev.0"
edition = "2021"
authors = ["TabbyML Team"]
homepage = "https://github.com/TabbyML/tabby"

[workspace.dependencies]
cached = "0.49.3"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serdeconv = "0.4.1"
tokio = "1.28"
tracing = "0.1"
tokio-cron-scheduler = "0.9.4"
tracing-subscriber = "0.3"
anyhow = "1.0.71"
serde-jsonlines = "0.4.0"
tantivy = "0.21.0"
async-trait = "0.1.72"
reqwest = { version = "0.12" }
derive_builder = "0.12.0"
futures = "0.3.28"
async-stream = "0.3.5"
regex = "1.10.0"
strum = { version = "0.24", features = ["derive"] }
thiserror = "1.0.49"
utoipa = "4.2"
axum = "0.7"
axum-extra = "0.9"
hyper = "1.1"
juniper = "0.16"
chrono = "0.4"
reqwest-eventsource = "0.6"
serial_test = "3.0.0"
hash-ids = "0.2.1"
ignore = "0.4.20"
nucleo = "0.5.0"
url = "2.5.0"
temp_testdir = "0.2"
git2 = "0.18.3"
tower-http = "0.5"

[workspace.dependencies.uuid]
version = "1.3.3"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[profile.dev.package]
insta.opt-level = 3
