[tool.poetry]
name = "tabby"
version = "0.1.0"
description = ""
authors = ["Meng Zhang <meng@tabbyml.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
datasets = "^2.10.1"
transformers = "^4.27.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
