[tool.poetry]
name = "tabby"
version = "0.1.0"
description = ""
authors = ["Meng Zhang <meng@tabbyml.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
datasets = "^2.10.1"
transformers = "^4.27.1"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
tritonclient = {extras = ["all"], version = "^2.31.0"}
streamlit = "^1.20.0"
loguru = "^0.6.0"
gitup = "^0.5.1"
toml = "^0.10.2"
gitpython = "^3.1.31"
peft = {git = "https://github.com/huggingface/peft.git", rev = "v0.2.0"}
duckdb = "^0.7.1"
torch = "^2.0.0"
bitsandbytes = "^0.37.2"
meilisearch = "^0.26.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
